added linux info